# ferris-forums

./: .gitignore  Cargo.toml  README.md
migrations/: 20240921012319_create_post_and_comments_table.sql  20240921225629_create_sub_and_user_tables_w_ref_integrity_and_indexes.sql  20240922000414_create_users_table.sql  20240922001640_indices.sql  20240929013027_non_null_sub_description.sql
src/: main.rs  repo.rs  routing.rs
src/api/: comment.rs  post.rs  sub.rs  user.rs
src/model/: comment.rs  mod.rs  post.rs  sub.rs  user.rs
src/repo/: comment.rs  post.rs  sub.rs  user.rs
