[package]
name = "ferris_forums"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "uuid",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
